styles scrollbars & fixes content panel gap

--- a/style.css
+++ b/style.css
@@ -7,10 +7,30 @@ body {
 .container {
     height: 100%;
     display: grid;
-    /* grid-template-columns: 1fr 4fr; */
     grid-template-columns: 1fr 4fr ;
     grid-template-rows: 1fr 4fr;
     box-sizing: border-box;
+}
+
+/* styles scrollbars */
+::-webkit-scrollbar {
+    width: 12px;
+}
+
+::-webkit-scrollbar-track {
+    border: 1px solid gray;
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.2); 
+    box-shadow: inset 0 0 6px rgba(0,0,0,0.2);
+    -webkit-border-radius: 6px;
+    border-radius: 6px;
+}
+
+::-webkit-scrollbar-thumb {
+    background: lightgray; 
+    -webkit-border-radius: 6px;
+    border-radius: 6px;
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.4); 
+    box-shadow: inset 0 0 6px rgba(0,0,0,0.4); 
 }
 
 
@@ -130,25 +150,19 @@ a:visited {
 
 /* Content Panel */
 
-/* .content div {
+.content div {
     border: 1px solid red;
-} */
+}
 
 .content {
     background-color: lightgrey;
-    /* padding: 20px; */
     display: grid;
-    /* gap: 20px; */
+    padding: 20px;
+    gap: 20px;
     grid-template-columns: 3fr 1fr;
     /* grid-template-rows: 1fr 1fr; */
-    height: 100%;
+    /* height: 100%; */
     /* overflow: auto; */
-}
-
-.projects,
-.announcements,
-.trending {
-    margin: 20px;
 }
 
 .card,
@@ -165,11 +179,6 @@ a:visited {
 .announceCard,
 .trendingCard {
     margin-top: 1rem
-}
-
-/* removes scrollbars */
-::-webkit-scrollbar {
-    display: none;
 }
 
 
